[package]
name = "async-fetcher"
version = "0.9.0"
repository = "https://github.com/pop-os/async-fetcher"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Asynchronous multi-connection multi-download resumable HTTP file fetching state machine"
keywords = ["async", "file", "fetch", "download", "parallel"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[workspace]
members = ["fetcher"]

[dependencies]
derive_more = "0.99.17"
derive_setters = "0.1.5"
derive-new = "0.5.9"
digest = "0.10.3"
filetime = "0.2.16"
futures = "0.3.21"
hex = "0.4.3"
httpdate = "1.0.2"
log = "0.4.16"
md-5 = "0.10.1"
numtoa = "0.2.4"
remem = "0.1.0"
sha2 = "0.10.2"
thiserror = "1.0.30"
http = "0.2.6"
once_cell = "1.10.0"
tokio-stream = "0.1.8"
ifaces = "0.1.0"
async-shutdown = "0.1.2"
isahc = "1.7.0"
reqwest = { version = "0.11.10", optional = true, features = ["stream"] }

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "io-util", "rt", "sync", "time"]

[features]
reqwest = ["dep:reqwest"]
