[package]
name = "async-fetcher"
version = "0.10.0"
repository = "https://github.com/pop-os/async-fetcher"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Asynchronous multi-connection multi-download resumable HTTP file fetching state machine"
keywords = ["async", "file", "fetch", "download", "parallel"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
]
license = "MPL-2.0"
readme = "README.md"
edition = "2018"

[workspace]
members = ["fetcher"]

[dependencies]
derive_more = "0.99.17"
derive_setters = "0.1.6"
derive-new = "0.5.9"
digest = "0.10.7"
filetime = "0.2.22"
futures = "0.3.28"
hex = "0.4.3"
httpdate = "1.0.3"
log = "0.4.20"
md-5 = "0.10.5"
numtoa = "0.2.4"
remem = "0.1.0"
sha2 = "0.10.7"
thiserror = "1.0.45"
http = "0.2.9"
once_cell = "1.18.0"
tokio-stream = "0.1.14"
ifaces = "0.1.0"
async-shutdown = "0.1.3"
isahc = { version = "1.7.2", optional = true }
reqwest = { version = "0.11.18", optional = true, features = ["stream"] }

[dependencies.serde]
version = "1.0.183"
features = ["derive"]

[dependencies.tokio]
version = "1.31.0"
features = ["fs", "io-util", "rt", "sync", "time"]

[features]
isahc = ["dep:isahc"]
reqwest = ["dep:reqwest"]
