[package]
name = "async-fetcher"
version = "0.11.0"
repository = "https://github.com/pop-os/async-fetcher"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "Asynchronous multi-connection multi-download resumable HTTP file fetching state machine"
keywords = ["async", "file", "fetch", "download", "parallel"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
]
license = "MPL-2.0"
readme = "README.md"
edition = "2021"

[workspace]
members = ["fetcher"]

[dependencies]
derive_setters = "0.1.6"
derive-new = "0.6.0"
digest = "0.10.7"
filetime = "0.2.23"
futures = "0.3.30"
hex = "0.4.3"
httpdate = "1.0.3"
log = "0.4.21"
md-5 = "0.10.6"
numtoa = "0.2.4"
remem = "0.1.0"
sha2 = "0.10.8"
thiserror = "1.0.60"
http = "1.1.0"
ifaces = "0.1.0"
async-shutdown = "0.2.2"
reqwest = { version = "0.12.4", features = ["stream"] }

[dependencies.serde]
version = "1.0.201"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["fs", "io-util", "rt", "sync", "time"]

[features]
