[package]
name = "fetcher"
version = "0.8.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
async-fetcher = { path = "../" }
atty = "0.2.14"
better-panic = "0.3.0"
fomat-macros = "0.3.1"
futures = "0.3.21"
pbr = "1.0.4"
ron = "0.7.0"
serde = { version = "1.0.136", features = [ "derive" ] }
thiserror = "1.0.30"
bytes = "1.1.0"
tokio-stream = "0.1.8"
async-shutdown = "0.1.2"
once_cell = "1.9.0"

[dependencies.tokio-util]
version = "0.6.9"
features = ["codec"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
