[package]
name = "fetcher"
version = "0.10.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
async-fetcher = { path = "../", features = ["reqwest"] }
atty = "0.2.14"
better-panic = "0.3.0"
fomat-macros = "0.3.2"
futures = "0.3.28"
pbr = "1.1.1"
ron = "0.8.0"
serde = { version = "1.0.183", features = [ "derive" ] }
thiserror = "1.0.45"
bytes = "1.4.0"
tokio-stream = "0.1.14"
async-shutdown = "0.1.3"
once_cell = "1.18.0"

[dependencies.tokio-util]
version = "0.7.8"
features = ["codec"]

[dependencies.tokio]
version = "1.31.0"
features = ["full"]
