[package]
name = "fetcher"
version = "0.10.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
async-fetcher = { path = "../" }
atty = "0.2.14"
better-panic = "0.3.0"
fomat-macros = "0.3.2"
futures = "0.3.30"
pbr = "1.1.1"
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
bytes = "1.6.0"
tokio-stream = "0.1.15"
async-shutdown = "0.2.2"
once_cell = "1.19.0"

[dependencies.tokio-util]
version = "0.7.11"
features = ["codec"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]
